--- a/cardapio.html
+++ b/cardapio.html
@@ -46,58 +46,58 @@
                     <p>B<br>R<br>E<br>A<br>K<br>F<br>A<br>S<br>T</p>
                 </div>
                 <div class="col-3">
-                    <strong>Ovos mexidos cremosos</strong>
+                    <strong>Lorem ipsum dolor sit.</strong>
                     <br>
-                    Ovos direto da Inglaterra, misturados com um delicioso requeijão da casa.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, est.
                     <br><br>
-                    <strong>Salada de frutas</strong>
+                    <strong>Lorem ipsum dolor sit.</strong>
                     <br>
-                    Pêra, uva, maçã, salada mista. Diz o que você quer sem eu dar nenhuma pista.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, est.
                     <br><br>
-                    <strong>Pão na chapa</strong>
+                    <strong>Lorem ipsum dolor sit.</strong>
                     <br>
-                    Pão francês gratinado com manteiga da terra, acompanhado com suco de laranja.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, est.
                     <br><br>
-                    <strong>Ovos mexidos cremosos</strong>
+                    <strong>Lorem ipsum dolor sit.</strong>
                     <br>
-                    Ovos direto da Inglaterra, misturados com um delicioso requeijão da casa.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, est.
                     <br><br>
-                    <strong>Salada de frutas</strong>
+                    <strong>Lorem ipsum dolor sit.</strong>
                     <br>
-                    Pêra, uva, maçã, salada mista. Diz o que você quer sem eu dar nenhuma pista.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, est.
                     <br><br>
-                    <strong>Pão na chapa</strong>
+                    <strong>Lorem ipsum dolor sit.</strong>
                     <br>
-                    Pão francês gratinado com manteiga da terra, acompanhado com suco de laranja.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, est.
                     <br><br>
                 </div>
                 <div class="col-2 text-right">
                     <p>L<br>U<br>N<br>C<br>H</p>                        
                 </div>
                 <div class="col-3">
-                    <strong>Salada americana</strong>
+                    <strong>Lorem ipsum dolor sit.</strong>
                     <br>
-                    Conjunto de folhas, tomate cereja e pepino acompanhado de cubinhos de carne de soja.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, est.
                     <br><br>
-                    <strong>Frango grelhado</strong>
+                    <strong>Lorem ipsum dolor sit.</strong>
                     <br>
-                    Frango grelhado, arroz, feijão branco, salada e batata frita.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, est.
                     <br><br>
-                    <strong>Salada americana</strong>
+                    <strong>Lorem ipsum dolor sit.</strong>
                     <br>
-                    Conjunto de folhas, tomate cereja e pepino acompanhado de cubinhos de carne de soja.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, est.
                     <br><br>
-                    <strong>Frango grelhado</strong>
+                    <strong>Lorem ipsum dolor sit.</strong>
                     <br>
-                    Frango grelhado, arroz, feijão branco, salada e batata frita.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, est.
                     <br><br>
-                    <strong>Salada americana</strong>
+                    <strong>Lorem ipsum dolor sit.</strong>
                     <br>
-                    Conjunto de folhas, tomate cereja e pepino acompanhado de cubinhos de carne de soja.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, est.
                     <br><br>
-                    <strong>Frango grelhado</strong>
+                    <strong>Lorem ipsum dolor sit.</strong>
                     <br>
-                    Frango grelhado, arroz, feijão branco, salada e batata frita.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, est.
                     <br><br>
                 </div>
             </div>            
